# hft_bot

./: .dockerignore  .env copy  .gitignore  .html  .m  Dockerfile  Makefile  dca.pem  docker-compose.yml  hft_bot.pem  private.pem  public.pem  pyproject.toml  requirements.txt
bot/: main.py
bot/api_client/: client.py
bot/api_client/endpoints/: account_rename_endpoints.py  accounts_endpoints.py  balance_endpoints.py  dcaendpoint.py  trading_entities_endpoints.py
bot/bots/: dca_run.py
bot/config/: config.py  settings.py
bot/core/operations/: bot_operations.py
bot/dca_bot/: create_dca_bot.py  schemas.py  signer.py
bot/exchange/: add_exchange.py  run.py  schemas.py  signer.py  threecommas_api.py
bot/models/: schemas.py
bot/services/: accounts_service.py  dca_service.py
bot/strategies/: dummy.py  scalping.py
bot/utils/: logger.py
keys/: generate_keys.py  private_key.pem  public_key.pem
